@@ -2,4 +2,3 @@ Module::Build
 Shell::Guess
 Test::Differences
 Test::More
-autodie
